--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src="./js/script.js" defer></script>
 <body>
     <div class="grid">
-        <p>sample text</p>
+        <a href="./images/samplelogo.png"><img src="./images/samplelogo.png"></a>
         <div class="image-reveal" data-radius="200">
             <img src="./images/utah2025-12162025-8.jpg" class="ir-base" alt="">
             <img src="./images/beatenpathco-96.JPG" class="ir-reveal" alt="">
@@ -21,6 +21,11 @@
         </div>
     </div>
 
-    
+   
 </body>
+
+</body>
+
+
+
 </html>
