--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
 <script src="./js/script.js" defer></script>
 <body>
     <div class="grid">
-        <a href="./images/samplelogo.png"><img src="./images/samplelogo.png"></a>
+
+        <div class="nav-column">
+            <a href="./images/samplelogo.png" class="logo"><img src="./images/samplelogo.png"></a>
+            <div class="nav-links">
+                <a href="people.html"><p>People</p></a>
+                <a href="planet.html"><p>Planet</p></a>
+                <a href="design.html"><p>Design</p></a>
+                <a href="contact.html"><p>Contact</p></a>
+                <a href="about.html"><p>About</p></a>
+            </div>
+        </div>
+        
         <div class="image-reveal" data-radius="200">
             <img src="./images/utah2025-12162025-8.jpg" class="ir-base" alt="">
             <img src="./images/beatenpathco-96.JPG" class="ir-reveal" alt="">
