--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="grid">
 
         <div class="nav-column">
-            <a href="./images/samplelogo.png" class="logo"><img src="./images/samplelogo.png"></a>
+            <a href="index.html" class="logo"><img src="./images/samplelogo.png"></a>
             <div class="nav-links">
                 <a href="./pages/photo.html"><p>Photo</p></a>
                 <a href="design.html"><p>Design</p></a>
