--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <script src="./js/script.js" defer></script>
+
 <body>
     <div class="grid">
 
@@ -23,12 +24,9 @@
                 <a href="about.html"><p>About</p></a>
             </div>
         </div>
-        
-        <div class="image-reveal" data-radius="200">
-            <img src="./images/lightest-5.jpeg" class="ir-base" alt="">
-            <img src="./images/medium-4.jpeg" class="ir-reveal" alt="">
-            <div class="ir-port"></div>
-        </div>
+
+        <div><img src="./images/darker-13.jpeg"></div>
+
     </div>
 
    
