--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
 
-        <div><img src="./images/darker-13.jpeg"></div>
+        <div><img src="./images/mediumlight-6.jpeg"></div>
 
     </div>
 
