--- a/pages/photo.html
+++ b/pages/photo.html
@@ -8,9 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&family=Special+Gothic:wght@400..700&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="../css/styles.css">
+    <script src="./js/script.js" defer></script>
 </head>
-
-<script src="./js/script.js" defer></script>
 
 <body>
     <div class="grid">
@@ -37,17 +36,20 @@
             <div class="gallery-wrap">
                  <div class="masonry-gallery">
                     <img src="../images/darker-1.jpeg" alt="">
-                    <img src="../images/vuori-14.JPG" alt="">
                     <img src="../images/darker-12.jpeg" alt="">
+                    <img src="../images/vuori-14.JPG" alt="">
+                    <img src="../images/medium-15.jpeg" alt="">
                     <img src="../images/lightest-10.jpeg" alt="">
                     <img src="../images/darker-9.jpeg" alt="">
                     <img src="../images/medium-11.jpeg" alt="">
                     <img src="../images/darker-4.jpeg" alt="">
                     <img src="../images/utah2025-12162025-8.jpg" alt="">
-                    <img src="../images/darker-11.jpeg" alt="">
                     <img src="../images/mediumdark-4.jpeg" alt="">
                     <img src="../images/medium-7.jpeg" alt="">
+                    <img src="../images/darker-13.jpeg" alt="">
+                    <img src="../images/darker-11.jpeg" alt="">
                     <img src="../images/medium-8.jpeg" alt="">
+                    <img src="../images/medium-13.jpeg" alt="">
                     <img src="../images/lightest-14.jpeg" alt="">
                     <img src="../images/medium-4.jpeg" alt="">
                     <img src="../images/medium-10.jpeg" alt="">
@@ -62,6 +64,8 @@
         </div>
 
     </div>
+
+
 </body>
 
 
