--- a/pages/design.html
+++ b/pages/design.html
@@ -29,7 +29,7 @@
 
                 <div class="image-module">
                     <h2>Ocellus</h2>
-                    <p>Experimental design project</p>
+                    <p>Experimental packaging design project for a concept makeup brand.</p>
                     <div class="image-row">
                         <div class="image-item">
                             <img src="../images/ocellus-1.jpeg">
@@ -61,7 +61,7 @@
                             <img src="../images/gobetwixt-1.jpeg">
                         </div>
                         <div class="image-item">
-                            <img src="../images/">
+                            <img src="../images/gobetwixt-2.jpeg">
                         </div>
                     </div>
                 </div>
@@ -97,23 +97,23 @@
                     <p>A type specimen for the font, Redaction.</p>
                     <div class="image-row">
                         <div class="image-item">
-                            <img src="../images/redaction-1.jpeg">
+                            <img src="../images/redaction-2.jpeg">
                         </div>
                         <div class="image-item">
-                            <img src="../images/redaction-2.jpeg">
+                            <img src="../images/redaction-1.jpeg">
                         </div>
                     </div>
                 </div>
 
                 <div class="image-module">
                     <h2>Summer Solstice</h2>
-                    <p>Poster and mockup for a fictional mountian biking event.</p>
+                    <p>Poster and mockup for a concept mountian biking event.</p>
                     <div class="image-row">
                         <div class="image-item">
-                            <img src="../images/summersolstic-1.jpeg">
+                            <img src="../images/summersolstice-2.jpeg">
                         </div>
                         <div class="image-item">
-                            <img src="../images/summersolstice-2.jpeg">
+                            <img src="../images/summersolstic-1.jpeg">
                         </div>
                     </div>
                 </div>
@@ -123,10 +123,10 @@
                     <p>A voting campaign targeted for nature and wildlife lovers.</p>
                     <div class="image-row">
                         <div class="image-item">
-                            <img src="../images/theycantvote-1.jpeg">
+                            <img src="../images/theycantvote-2.jpeg">
                         </div>
                         <div class="image-item">
-                            <img src="../images/theycantvote-2.jpeg">
+                            <img src="../images/theycantvote-1.jpeg">
                         </div>
                     </div>
                 </div>
