--- a/pages/about.html
+++ b/pages/about.html
@@ -27,9 +27,16 @@
 
         <div class="text-wrap">
             <img src="../images/me-1.jpg">
-            <h1>I'm Holly</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam vitae laboriosam similique quaerat architecto! Obcaecati nesciunt ducimus quam a? Repellendus nihil corporis quam rerum iure quos nobis voluptas officia sint?</p>
+            <h2>Hi,</h2>
+            <p>My work emphasizes the connection we have with our planet, from athletes scaling cliff walls to ospreys over the horizon and the landscapes we get lost in. Our planet is our playground, but it's changing rapidly. We protect what we love, and that starts with connection — in the wild, through photographs, and with storytelling.
+            I'd love to be a part of your story.</p>
+            <p>As an outdoor an adventure photographer, I'm ready to travel for events, elopements, creative shoots, and conservation work.</p>
+            <p>For the spirit of adventure,</p>
+            <div class="secondary-wrap">
+                <img src="../images/logo.png">
+            </div>
         </div>
+
 
     </div>
 
