--- a/pages/about.html
+++ b/pages/about.html
@@ -15,13 +15,15 @@
 <body>
     <div class="grid">
 
-        <div class="nav-column">
-            <a href="index.html" class="logo"><img src="../images/samplelogo.png"></a>
-            <div class="nav-links">
-                <a href="./pages/photo.html"><p>Photo</p></a>
-                <a href="design.html"><p>Design</p></a>
-                <a href="contact.html"><p>Contact</p></a>
-                <a href="about.html"><p>About</p></a>
+        <div class="sticky-nav">
+            <div class="nav-column">
+                <a href="index.html" class="logo"><img src="../images/samplelogo.png"></a>
+                <div class="nav-links">
+                    <a href="./pages/photo.html"><p>Photo</p></a>
+                    <a href="design.html"><p>Design</p></a>
+                    <a href="contact.html"><p>Contact</p></a>
+                    <a href="about.html"><p>About</p></a>
+                </div>
             </div>
         </div>
 
