--- a/pages/photo.html
+++ b/pages/photo.html
@@ -14,52 +14,52 @@
 <body>
     <div class="grid">
 
-        <div class="nav-column">
-            <a href="../index.html" class="logo"><img src="../images/samplelogo.png"></a>
-            <div class="nav-links">
-                
-                <div class="nav-group">
-                    <a href="photo.html" class="nav-parent">Photo</a>
-                    <div class="nav-sub">
-                        <a href="seniors.html">Senior Portraits</a>
-                        <a href="events.html">Events and Marketing</a>
-                        <a href="sports.html">Collegiate Sports</a>
+        <div class="sticky-nav">
+            <div class="nav-column">
+                <a href="../index.html" class="logo"><img src="../images/samplelogo.png"></a>
+                <div class="nav-links">
+                    
+                    <div class="nav-group">
+                        <a href="photo.html" class="nav-parent">Photo</a>
+                        <div class="nav-sub">
+                            <a href="seniors.html">Senior Portraits</a>
+                            <a href="events.html">Events and Marketing</a>
+                            <a href="sports.html">Collegiate Sports</a>
+                        </div>
                     </div>
+                    <a href="design.html"><p>Design</p></a>
+                    <a href="contact.html"><p>Contact</p></a>
+                    <a href="about.html"><p>About</p></a>
                 </div>
-                <a href="design.html"><p>Design</p></a>
-                <a href="contact.html"><p>Contact</p></a>
-                <a href="about.html"><p>About</p></a>
             </div>
         </div>
 
         <div class="photo-column">
-            <div class="gallery-wrap">
-                 <div class="masonry-gallery">
-                    <img src="../images/darker-1.jpeg" alt="">
-                    <img src="../images/darker-12.jpeg" alt="">
-                    <img src="../images/vuori-14.JPG" alt="">
-                    <img src="../images/medium-15.jpeg" alt="">
-                    <img src="../images/lightest-10.jpeg" alt="">
-                    <img src="../images/darker-9.jpeg" alt="">
-                    <img src="../images/medium-11.jpeg" alt="">
-                    <img src="../images/darker-4.jpeg" alt="">
-                    <img src="../images/utah2025-12162025-8.jpg" alt="">
-                    <img src="../images/mediumdark-4.jpeg" alt="">
-                    <img src="../images/medium-7.jpeg" alt="">
-                    <img src="../images/darker-13.jpeg" alt="">
-                    <img src="../images/darker-11.jpeg" alt="">
-                    <img src="../images/medium-8.jpeg" alt="">
-                    <img src="../images/medium-13.jpeg" alt="">
-                    <img src="../images/lightest-14.jpeg" alt="">
-                    <img src="../images/medium-4.jpeg" alt="">
-                    <img src="../images/medium-10.jpeg" alt="">
-                    <img src="../images/mediumdark-1.jpeg" alt="">
-                    <img src="../images/mediumlight-6.jpeg" alt="">
-                    <img src="../images/medium-9.jpeg" alt="">
-                    <img src="../images/mediumdark-5.jpeg" alt="">
-                    <img src="../images/mediumdark-6.jpeg" alt="">
-                    <img src="../images/mediumdark-7.jpeg" alt="">
-                </div>
+            <div class="masonry-gallery">
+                <img src="../images/darker-1.jpeg" alt="">
+                <img src="../images/darker-12.jpeg" alt="">
+                <img src="../images/vuori-14.JPG" alt="">
+                <img src="../images/medium-15.jpeg" alt="">
+                <img src="../images/lightest-10.jpeg" alt="">
+                <img src="../images/darker-9.jpeg" alt="">
+                <img src="../images/medium-11.jpeg" alt="">
+                <img src="../images/darker-4.jpeg" alt="">
+                <img src="../images/utah2025-12162025-8.jpg" alt="">
+                <img src="../images/mediumdark-4.jpeg" alt="">
+                <img src="../images/medium-7.jpeg" alt="">
+                <img src="../images/darker-13.jpeg" alt="">
+                <img src="../images/darker-11.jpeg" alt="">
+                <img src="../images/medium-8.jpeg" alt="">
+                <img src="../images/medium-13.jpeg" alt="">
+                <img src="../images/lightest-14.jpeg" alt="">
+                <img src="../images/medium-4.jpeg" alt="">
+                <img src="../images/medium-10.jpeg" alt="">
+                <img src="../images/mediumdark-1.jpeg" alt="">
+                <img src="../images/mediumlight-6.jpeg" alt="">
+                <img src="../images/medium-9.jpeg" alt="">
+                <img src="../images/mediumdark-5.jpeg" alt="">
+                <img src="../images/mediumdark-6.jpeg" alt="">
+                <img src="../images/mediumdark-7.jpeg" alt="">
             </div>
         </div>
 
