--- a/pages/sports.html
+++ b/pages/sports.html
@@ -15,21 +15,23 @@
 <body>
     <div class="grid">
 
-        <div class="nav-column">
-            <a href="../index.html" class="logo"><img src="../images/samplelogo.png"></a>
-            <div class="nav-links">
-                
-                <div class="nav-group">
-                    <a href="photo.html" class="nav-parent">Photo</a>
-                    <div class="nav-sub">
-                        <a href="seniors.html">Senior Portraits</a>
-                        <a href="events.html">Events and Marketing</a>
-                        <a href="sports.html">Collegiate Sports</a>
+        <div class="sticky-nav">
+            <div class="nav-column">
+                <a href="../index.html" class="logo"><img src="../images/samplelogo.png"></a>
+                <div class="nav-links">
+                    
+                    <div class="nav-group">
+                        <a href="photo.html" class="nav-parent">Photo</a>
+                        <div class="nav-sub">
+                            <a href="seniors.html">Senior Portraits</a>
+                            <a href="events.html">Events and Marketing</a>
+                            <a href="sports.html">Collegiate Sports</a>
+                        </div>
                     </div>
+                    <a href="design.html"><p>Design</p></a>
+                    <a href="contact.html"><p>Contact</p></a>
+                    <a href="about.html"><p>About</p></a>
                 </div>
-                <a href="design.html"><p>Design</p></a>
-                <a href="contact.html"><p>Contact</p></a>
-                <a href="about.html"><p>About</p></a>
             </div>
         </div>
 
