--- a/pages/about.html
+++ b/pages/about.html
@@ -27,15 +27,19 @@
             </div>
         </div>
 
-        <div class="text-wrap">
-            <img src="../images/me-1.jpg">
-            <h2>Hi,</h2>
-            <p>My work emphasizes the connection we have with our planet, from athletes scaling cliff walls to ospreys over the horizon and the landscapes we get lost in. Our planet is our playground, but it's changing rapidly. We protect what we love, and that starts with connection — in the wild, through photographs, and with storytelling.
-            I'd love to be a part of your story.</p>
-            <p>As an outdoor an adventure photographer, I'm ready to travel for events, elopements, creative shoots, and conservation work.</p>
-            <p>For the spirit of adventure,</p>
-            <div class="secondary-wrap">
-                <img src="../images/logo.png">
+        <div class="text-viewport">
+            <div class="text-wrap">
+                <div class="text-wrap">
+                    <img src="../images/me-1.jpg">
+                    <h2>Hi,</h2>
+                    <p>My work emphasizes the connection we have with our planet, from athletes scaling cliff walls to ospreys over the horizon and the landscapes we get lost in. Our planet is our playground, but it's changing rapidly. We protect what we love, and that starts with connection — in the wild, through photographs, and with storytelling.
+                    I'd love to be a part of your story.</p>
+                    <p>As an outdoor an adventure photographer, I'm ready to travel for events, elopements, creative shoots, and conservation work.</p>
+                    <p>For the spirit of adventure,</p>
+                    <div class="secondary-wrap">
+                        <img src="../images/logo.png">
+                    </div>
+                </div>
             </div>
         </div>
 
