many, many, changes.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&family=Special+Gothic:wght@400..700&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="./js/script.js" defer></script>
 </head>
-
-<script src="./js/script.js" defer></script>
 
 <body>
     <div class="grid">
@@ -18,10 +17,17 @@
         <div class="sticky-nav">
             <div class="nav-column">
                 <a href="index.html" class="logo"><img src="./images/samplelogo.png"></a>
+                
+                <div class="nav-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                
                 <div class="nav-links">
+                    <button class="menu-close" aria-label="Close menu">&times;</button>
                     <a href="./pages/photo.html"><p>Photo</p></a>
                     <a href="design.html"><p>Design</p></a>
-                    <a href="contact.html"><p>Contact</p></a>
                     <a href="about.html"><p>About</p></a>
                 </div>
             </div>
@@ -35,9 +41,5 @@
 
    
 </body>
-
-</body>
-
-
 
 </html>
