--- a/pages/about.html
+++ b/pages/about.html
@@ -8,20 +8,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&family=Special+Gothic:wght@400..700&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="../css/styles.css">
+    <script src="../js/script.js" defer></script>
 </head>
-
-<script src="./js/script.js" defer></script>
 
 <body>
     <div class="grid">
 
         <div class="sticky-nav">
             <div class="nav-column">
-                <a href="index.html" class="logo"><img src="../images/samplelogo.png"></a>
+                <a href="../index.html" class="logo"><img src="../images/samplelogo.png"></a>
+                
+                <div class="nav-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                
                 <div class="nav-links">
+                    <button class="menu-close" aria-label="Close menu">&times;</button>
                     <a href="./pages/photo.html"><p>Photo</p></a>
                     <a href="design.html"><p>Design</p></a>
-                    <a href="contact.html"><p>Contact</p></a>
                     <a href="about.html"><p>About</p></a>
                 </div>
             </div>
@@ -29,16 +35,18 @@
 
         <div class="text-viewport">
             <div class="text-wrap">
-                <div class="text-wrap">
-                    <img src="../images/me-1.jpg">
-                    <h2>Hi,</h2>
-                    <p>My work emphasizes the connection we have with our planet, from athletes scaling cliff walls to ospreys over the horizon and the landscapes we get lost in. Our planet is our playground, but it's changing rapidly. We protect what we love, and that starts with connection — in the wild, through photographs, and with storytelling.
-                    I'd love to be a part of your story.</p>
-                    <p>As an outdoor an adventure photographer, I'm ready to travel for events, elopements, creative shoots, and conservation work.</p>
-                    <p>For the spirit of adventure,</p>
-                    <div class="secondary-wrap">
-                        <img src="../images/logo.png">
-                    </div>
+                <img src="../images/me-3.jpg">
+                <h2>Hi</h2>
+                <p>My work emphasizes the connection we have with our planet, from athletes scaling cliff walls to ospreys over the horizon and the landscapes we get lost in. Our planet is our playground, but it's changing rapidly. We protect what we love, and that starts with connection — in the wild, through photographs, and with storytelling.</p>
+                <p>I'd love to be a part of your story! Contact me for more information on events, elopements, portraits, creative shoots, and conservation work. I will travel anywhere in the U.S.!</p>
+                <p>For the spirit of adventure,</p>
+                <div class="secondary-wrap">
+                    <img src="../images/logo.png">
+                </div>
+
+                <div class="links">
+                    <p>Email: hollyfaschingphotography@gmail.com</p>
+                    <a href="https://www.instagram.com/hollyfasching/"><p>Instagram</p></a>
                 </div>
             </div>
         </div>
@@ -48,9 +56,4 @@
 
    
 </body>
-
-</body>
-
-
-
 </html>
