--- a/pages/design.html
+++ b/pages/design.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&family=Special+Gothic:wght@400..700&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="../css/styles.css">
-    <script src="./js/script.js" defer></script>
+    <script src="../js/script.js" defer></script>
 </head>
 
 <body>
@@ -16,11 +16,18 @@
 
         <div class="sticky-nav">
             <div class="nav-column">
-                <a href="index.html" class="logo"><img src="../images/samplelogo.png"></a>
+                <a href="../index.html" class="logo"><img src="../images/samplelogo.png"></a>
+                
+                <div class="nav-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                
                 <div class="nav-links">
-                    <a href="./pages/photo.html"><p>Photo</p></a>
+                    <button class="menu-close" aria-label="Close menu">&times;</button>
+                    <a href="../pages/photo.html"><p>Photo</p></a>
                     <a href="design.html"><p>Design</p></a>
-                    <a href="contact.html"><p>Contact</p></a>
                     <a href="about.html"><p>About</p></a>
                 </div>
             </div>
@@ -37,6 +44,32 @@
                     </div>
                     <div class="image-item">
                         <img src="../images/ocellus-2.jpeg">
+                    </div>
+                </div>
+            </div>
+
+            <div class="image-module">
+                <h2>Redaction</h2>
+                <p>A type specimen for the font, Redaction.</p>
+                <div class="image-row">
+                    <div class="image-item">
+                        <img src="../images/redaction-2.jpeg">
+                    </div>
+                    <div class="image-item">
+                        <img src="../images/redaction-1.jpeg">
+                    </div>
+                </div>
+            </div>
+
+            <div class="image-module">
+                <h2>Lower Merion Conservancy</h2>
+                <p>Logo and branding desing for Lower Merion Conservancy.</p>
+                <div class="image-row">
+                    <div class="image-item">
+                        <img src="../images/lmc-1.jpeg">
+                    </div>
+                    <div class="image-item">
+                        <img src="../images/lmc-2.jpg">
                     </div>
                 </div>
             </div>
@@ -68,6 +101,19 @@
             </div>
 
             <div class="image-module">
+                <h2>They Can't Vote</h2>
+                <p>A voting campaign targeted for nature and wildlife lovers.</p>
+                <div class="image-row">
+                    <div class="image-item">
+                        <img src="../images/theycantvote-2.jpeg">
+                    </div>
+                    <div class="image-item">
+                        <img src="../images/theycantvote-1.jpeg">
+                    </div>
+                </div>
+            </div>
+
+            <div class="image-module">
                 <h2>Kodak Book Redesign</h2>
                 <p>Redesigning a cover for the classic Kodak How-To books. Shot on 35mm film.</p>
                 <div class="image-row">
@@ -76,32 +122,6 @@
                     </div>
                     <div class="image-item">
                         <img src="../images/kodakredesign-2.jpeg">
-                    </div>
-                </div>
-            </div>
-
-            <div class="image-module">
-                <h2>Lower Merion Conservancy</h2>
-                <p>Logo and branding desing for Lower Merion Conservancy.</p>
-                <div class="image-row">
-                    <div class="image-item">
-                        <img src="../images/lmc-1.jpeg">
-                    </div>
-                    <div class="image-item">
-                        <img src="../images/">
-                    </div>
-                </div>
-            </div>
-
-            <div class="image-module">
-                <h2>Redaction</h2>
-                <p>A type specimen for the font, Redaction.</p>
-                <div class="image-row">
-                    <div class="image-item">
-                        <img src="../images/redaction-2.jpeg">
-                    </div>
-                    <div class="image-item">
-                        <img src="../images/redaction-1.jpeg">
                     </div>
                 </div>
             </div>
@@ -118,20 +138,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class="image-module">
-                <h2>They Can't Vote</h2>
-                <p>A voting campaign targeted for nature and wildlife lovers.</p>
-                <div class="image-row">
-                    <div class="image-item">
-                        <img src="../images/theycantvote-2.jpeg">
-                    </div>
-                    <div class="image-item">
-                        <img src="../images/theycantvote-1.jpeg">
-                    </div>
-                </div>
-            </div>
-
 
         </div>
     </div>
