--- a/pages/about.html
+++ b/pages/about.html
@@ -26,7 +26,7 @@
                 
                 <div class="nav-links">
                     <button class="menu-close" aria-label="Close menu">&times;</button>
-                    <a href="./pages/photo.html"><p>Photo</p></a>
+                    <a href="../pages/photo.html"><p>Photo</p></a>
                     <a href="design.html"><p>Design</p></a>
                     <a href="about.html"><p>About</p></a>
                 </div>
