--- a/pages/about.html
+++ b/pages/about.html
@@ -36,14 +36,21 @@
         <div class="text-viewport">
             <div class="text-wrap">
                 <img src="../images/me-3.jpg">
-                <h2>Hi</h2>
+                <h2>For the spirit of adventure</h2>
                 <p>My work emphasizes the connection we have with our planet, from athletes scaling cliff walls to ospreys over the horizon and the landscapes we get lost in. Our planet is our playground, but it's changing rapidly. We protect what we love, and that starts with connection — in the wild, through photographs, and with storytelling.</p>
-                <p>I'd love to be a part of your story! Contact me for more information on events, elopements, portraits, creative shoots, and conservation work. I will travel anywhere in the U.S.!</p>
-                <p>For the spirit of adventure,</p>
-                <div class="secondary-wrap">
-                    <img src="../images/logo.png">
-                </div>
-
+                <p>I'd love to be a part of your story! Contact me for more information on events, elopements, portraits, creative shoots, and conservation work anywhere in the U.S.</p>
+                <p class="clients-heading">Current and Past Clients:</p>
+                <ul class="list-items">
+                    <li>Red Bull</li>
+                    <li>Vuori</li>
+                    <li>Beaten Path Co.</li>
+                    <li>Blue Mountain Ski Resort</li>
+                    <li>Lehigh University</li>
+                    <li>Lehigh Athletics</li>
+                    <li>West Virginia University</li>
+                    <li>University of Pennsylvania</li>
+                    <li>Boston University</li>
+                </ul>
                 <div class="links">
                     <p>Email: hollyfaschingphotography@gmail.com</p>
                     <a href="https://www.instagram.com/hollyfasching/"><p>Instagram</p></a>
