--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <div class="nav-links">
                     <button class="menu-close" aria-label="Close menu">&times;</button>
                     <a href="./pages/photo.html"><p>Photo</p></a>
-                    <a href="design.html"><p>Design</p></a>
-                    <a href="about.html"><p>About</p></a>
+                    <a href="./pages/design.html"><p>Design</p></a>
+                    <a href="./pages/about.html"><p>About</p></a>
                 </div>
             </div>
         </div>
