--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&family=Special+Gothic:wght@400..700&display=swap" rel="stylesheet">  
-    <link rel="stylesheet" href="./css/styles.css">
-    <script src="./js/script.js" defer></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/script.js" defer></script>
 </head>
 
 <body>
@@ -26,9 +26,9 @@
                 
                 <div class="nav-links">
                     <button class="menu-close" aria-label="Close menu">&times;</button>
-                    <a href="./pages/photo.html"><p>Photo</p></a>
-                    <a href="./pages/design.html"><p>Design</p></a>
-                    <a href="./pages/about.html"><p>About</p></a>
+                    <a href="pages/photo.html"><p>Photo</p></a>
+                    <a href="pages/design.html"><p>Design</p></a>
+                    <a href="pages/about.html"><p>About</p></a>
                 </div>
             </div>
         </div>
