--- a/index.html
+++ b/index.html
@@ -38,9 +38,13 @@
             <img src="./images/people-15.jpg">
         </div>
 
+        <div class="site-footer">
+            <p>The Planet and its People.</p>
+            <p>Copyright 2026 Holly Fasching Photography.</p>
+        </div>
+
     </div>
 
-   
 </body>
 
 </html>
