--- a/pages/about.html
+++ b/pages/about.html
@@ -59,6 +59,10 @@
             </div>
         </div>
 
+        <div class="site-footer">
+            <p>The Planet and its People.</p>
+            <p>Copyright 2026 Holly Fasching Photography.</p>
+        </div>
 
     </div>
 
