--- a/pages/design.html
+++ b/pages/design.html
@@ -37,6 +37,27 @@
         <div class="photo-column">
 
             <div class="image-module">
+                <h2>Printmaking and Illustration</h2>
+                <p>Original illustrations in screen and relief printing.</p>
+                <div class="image-row">
+                    <div class="image-item">
+                        <img src="../images/prints_vultureredhead.jpg">
+                    </div>
+                    <div class="image-item">
+                        <img src="../images/prints_brownthrasher.jpg">
+                    </div>
+                </div>
+                <div class="image-row">
+                    <div class="image-item">
+                        <img src="../images/prints_birdswillcall.jpg">
+                    </div>
+                    <div class="image-item">
+                        <img src="../images/prints_downy.png">
+                    </div>
+                </div>
+            </div>
+
+            <div class="image-module">
                 <h2>Ocellus</h2>
                 <p>Experimental packaging design project for a concept makeup brand.</p>
                 <div class="image-row">
@@ -141,6 +162,17 @@
             </div>
 
         </div>
+
+        <div class="site-footer">
+            <p>The Planet and its People.</p>
+            <p>Copyright 2026 Holly Fasching Photography.</p>
+        </div>
+
+        <div class="lightbox" aria-hidden="true">
+            <button class="lightbox-close" aria-label="Close">&times;</button>
+            <img class="lightbox-image" src="" alt="">
+        </div>
+        
     </div>
 
 </body>
