--- a/pages/planet.html
+++ b/pages/planet.html
@@ -70,7 +70,17 @@
             </div>
         </div>
 
+        <div class="site-footer">
+            <p>The Planet and its People.</p>
+            <p>Copyright 2026 Holly Fasching Photography.</p>
+        </div>
     </div>
+
+    <div class="lightbox" aria-hidden="true">
+        <button class="lightbox-close" aria-label="Close">&times;</button>
+        <img class="lightbox-image" src="" alt="">
+    </div>
+
     
 </body>
 
