--- a/pages/people.html
+++ b/pages/people.html
@@ -66,6 +66,16 @@
             </div>
         </div>
 
+        <div class="site-footer">
+            <p>The Planet and its People.</p>
+            <p>Copyright 2026 Holly Fasching Photography.</p>
+        </div>
+        
+    </div>
+
+    <div class="lightbox" aria-hidden="true">
+        <button class="lightbox-close" aria-label="Close">&times;</button>
+        <img class="lightbox-image" src="" alt="">
     </div>
     
 </body>
