--- a/pages/people.html
+++ b/pages/people.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Planet and its People</title>
+    <title>Holly Fasching Photography</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&family=Special+Gothic:wght@400..700&display=swap" rel="stylesheet">  
@@ -35,6 +35,14 @@
         </div>
 
         <div class="photo-column">
+            <div class="step" data-img="Backpack_Sticky_Outside.jpg">
+                <h2>Videography – Fifth is First</h2>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/x2hDB8G6dgE?si=LCB7-HbNqbxhydYv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <p>Stoked to share the first look at my film, Fifth is First, launching this spring! Many thanks to Fifth Street Cross, Gabe Lloyd, and the Lehigh University Film Department, this project wouldn't happen without them.</p>
+            </div>
+            <h2>Photo</h2>
             <div class="masonry-gallery">
                 <img src="../images/people-1.jpg" alt="">
                 <img src="../images/people-2.jpg" alt="">
