--- a/pages/film.html
+++ b/pages/film.html
@@ -36,34 +36,12 @@
         </div>
 
         <div class="photo-column">
-            <div class="masonry-gallery">
-                <img src="../images/people-1.jpg" alt="">
-                <img src="../images/people-2.jpg" alt="">
-                <img src="../images/people-20.jpg" alt="">
-                <img src="../images/people-21.jpg" alt="">
-                <img src="../images/people-22.jpg" alt="">
-                <img src="../images/people-5.jpg" alt="">
-                <img src="../images/people-6.jpg" alt="">
-                <img src="../images/people-7.jpg" alt="">
-                <img src="../images/people-8.jpg" alt="">
-                <img src="../images/people-9.jpg" alt="">
-                <img src="../images/people-29.jpg" alt="">
-                <img src="../images/people-14.jpg" alt="">
-                <img src="../images/people-15.jpg" alt="">
-                <img src="../images/people-16.jpg" alt="">
-                <img src="../images/people-17.jpg" alt="">
-                <img src="../images/people-18.jpg" alt="">
-                <img src="../images/people-11.jpg" alt="">
-                <img src="../images/people-12.jpg" alt="">
-                <img src="../images/people-13.jpg" alt="">
-                <img src="../images/people-3.jpg" alt="">
-                <img src="../images/people-4.jpg" alt="">
-                <img src="../images/people-19.jpg" alt="">
-                <img src="../images/people-23.jpg" alt="">
-                <img src="../images/people-24.jpg" alt="">
-                <img src="../images/people-25.jpg" alt="">
-                <img src="../images/people-26.jpg" alt="">
-                <img src="../images/people-27.jpg" alt="">
+            <div class="image-module">
+                <h2>Fifth is First Film</h2>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/x2hDB8G6dgE?si=LCB7-HbNqbxhydYv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <p>Stoked to share the first look at my film, Fifth is First, launching this spring! Many thanks to Fifth Street Cross, Gabe Lloyd, and the Lehigh University Film Department, this project wouldn't happen without them.</p>
             </div>
         </div>
 
