--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <button class="menu-close" aria-label="Close menu">&times;</button>
                     <a href="pages/people.html"><p>People</p></a>
                     <a href="pages/planet.html"><p>Planet</p></a>
+                    <a href="pages/film.html"><p>Film</p></a>
                     <a href="pages/design.html"><p>Design</p></a>
                     <a href="pages/about.html"><p>About</p></a>
                 </div>
