--- a/pages/about.html
+++ b/pages/about.html
@@ -40,8 +40,8 @@
             <div class="text-wrap">
                 <img src="../images/me-2-2.jpg">
                 <h2>For the spirit of adventure</h2>
-                <p>My work emphasizes the connection we have with our planet, from athletes scaling cliff walls to ospreys over the horizon and the landscapes we get lost in. Our planet is our playground, but it's changing rapidly. We protect what we love, and that starts with connection — in the wild, through photographs, and with storytelling.</p>
-                <p>For the last five years, I have had the privilege to connect with my clients and tell their stories and I’d love to be a part of yours. Contact me for more information on events, elopements, portraits, creative shoots, and conservation work anywhere in the U.S.!</p>
+                <p>My work emphasizes the connection we have with our planet, from athletes scaling cliff walls to ospreys over the horizon to the landscapes we get lost in. Our planet is our playground, but it's changing rapidly. We protect what we love, and that starts with connection—in the wild, through photographs, and with storytelling.</p>
+                <p>For the last five years, I have had the privilege to connect with my clients and tell their stories, and I’d love to be a part of yours. Contact me for more information on events, elopements, portraits, creative shoots, and conservation work anywhere in the U.S.!</p>
                 <p class="clients-heading">Current and Past Clients:</p>
                 <ul class="list-items">
                     <li>Red Bull</li>
