--- a/pages/about.html
+++ b/pages/about.html
@@ -11,20 +11,16 @@
     <link rel="stylesheet" href="../css/styles.css">
     <script src="../js/script.js" defer></script>
 </head>
-
 <body>
-    <div class="grid">
-
+    <div class="grid"></div>
         <div class="sticky-nav">
             <div class="nav-column">
-                <a href="../index.html" class="logo"><img src="../images/samplelogo.jpg"></a>
-                
+                <a href="../index.html" class="logo"><img src="../images/samplelogo.jpg"></a>  
                 <div class="nav-toggle">
                     <span></span>
                     <span></span>
                     <span></span>
-                </div>
-                
+                </div>             
                 <div class="nav-links">
                     <button class="menu-close" aria-label="Close menu">&times;</button>
                     <a href="../pages/people.html"><p>People</p></a>
@@ -35,7 +31,6 @@
                 </div>
             </div>
         </div>
-
         <div class="text-viewport">
             <div class="text-wrap">
                 <img src="../images/me-2-2.jpg">
@@ -60,14 +55,10 @@
                 </div>
             </div>
         </div>
-
         <div class="site-footer">
             <p>The Planet and its People.</p>
             <p>Copyright 2026 Holly Fasching Photography.</p>
         </div>
-
-    </div>
-
-   
+    </div>  
 </body>
 </html>
