--- a/pages/events.html
+++ b/pages/events.html
@@ -11,44 +11,38 @@
     <link rel="stylesheet" href="../css/styles.css">
     <script src="../js/script.js" defer></script>
 </head>
-
 <body>
     <div class="grid">
-
         <div class="photo-column">
             <div class="gallery-wrap">
                  <div class="masonry-gallery">
-                    <img src="../images/events-1.jpeg" alt="">
-                    <img src="../images/events-2.jpeg" alt="">
-                    <img src="../images/events-3.jpeg" alt="">
-                    <img src="../images/events-4.jpeg" alt="">
-                    <img src="../images/events-5.jpeg" alt="">
-                    <img src="../images/events-6.jpeg" alt="">
-                    <img src="../images/events-7.jpeg" alt="">
-                    <img src="../images/events-8.jpeg" alt="">
-                    <img src="../images/events-9.jpeg" alt="">
-                    <img src="../images/events-10.jpeg" alt="">
-                    <img src="../images/events-11.jpeg" alt="">
-                    <img src="../images/events-12.jpeg" alt="">
-                    <img src="../images/events-13.jpeg" alt="">
-                    <img src="../images/events-14.jpeg" alt="">
-                    <img src="../images/events-15.jpeg" alt="">
-                    <img src="../images/events-16.jpeg" alt="">
-                    <img src="../images/events-17.jpeg" alt="">
-                    <img src="../images/events-18.jpeg" alt="">
-                    <img src="../images/events-19.jpeg" alt="">
-                    <img src="../images/events-20.jpeg" alt="">
-                    <img src="../images/events-21.jpeg" alt="">
-                    <img src="../images/events-22.jpeg" alt="">
-                    <img src="../images/events-23.jpeg" alt="">
-                    <img src="../images/events-24.jpeg" alt="">
+                    <img src="../images/events-1.jpeg">
+                    <img src="../images/events-2.jpeg">
+                    <img src="../images/events-3.jpeg">
+                    <img src="../images/events-4.jpeg">
+                    <img src="../images/events-5.jpeg">
+                    <img src="../images/events-6.jpeg">
+                    <img src="../images/events-7.jpeg">
+                    <img src="../images/events-8.jpeg">
+                    <img src="../images/events-9.jpeg">
+                    <img src="../images/events-10.jpeg">
+                    <img src="../images/events-11.jpeg">
+                    <img src="../images/events-12.jpeg">
+                    <img src="../images/events-13.jpeg">
+                    <img src="../images/events-14.jpeg">
+                    <img src="../images/events-15.jpeg">
+                    <img src="../images/events-16.jpeg">
+                    <img src="../images/events-17.jpeg">
+                    <img src="../images/events-18.jpeg">
+                    <img src="../images/events-19.jpeg">
+                    <img src="../images/events-20.jpeg">
+                    <img src="../images/events-21.jpeg">
+                    <img src="../images/events-22.jpeg">
+                    <img src="../images/events-23.jpeg">
+                    <img src="../images/events-24.jpeg">
                 </div>
             </div>
         </div>
-
     </div>
 </body>
-
-
-
 </html>
