--- a/pages/about.html
+++ b/pages/about.html
@@ -12,7 +12,7 @@
     <script src="../js/script.js" defer></script>
 </head>
 <body>
-    <div class="grid"></div>
+    <div class="grid">
         <div class="sticky-nav">
             <div class="nav-column">
                 <a href="../index.html" class="logo"><img src="../images/samplelogo.jpg"></a>  
